Made some design changes and added footer

--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,54 @@ body {
   color: var(--text-color);
   font-family: var(--font-family);
 }
+
+/* SCROLLBAR */
+  /* Works on Chrome, Edge, and Safari */
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: #000000;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: linear-gradient(45deg, var(--primary-color), var(--secondary-color));
+    border-radius: 5px;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(45deg, var(--secondary-color), var(--primary-color));
+  }
+
+  ::-webkit-scrollbar-thumb:active {
+    background: var(--primary-color);
+  }
+
+  /* Works on Firefox */
+  html {
+    scrollbar-width: auto;
+  }
+
+  html::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  html::-webkit-scrollbar-track {
+    background: #000000;
+  }
+
+  html::-webkit-scrollbar-thumb {
+    background: linear-gradient(45deg, var(--primary-color), var(--secondary-color));
+    border-radius: 5px;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+
+  html::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(45deg, var(--secondary-color), var(--primary-color));
+  }
+
+  html::-webkit-scrollbar-thumb:active {
+    background: var(--primary-color);
+  }
