--- a/src/pages/home/components/FooterSocial.css
+++ b/src/pages/home/components/FooterSocial.css
@@ -1,4 +1,40 @@
 .social__link {
-    display: flex;
-    gap: 0.5rem;
+  position: relative;
+  display: inline-block;
+  color: var(--primary-color);
+  text-decoration: none;
+  font-size: 0.8rem;
+  font-weight: 300;
+  margin: 0 0.5rem;
+  padding: 0.5rem 1rem; /* Add desired padding */
+  border-radius: 4px; /* Add desired border radius */
+  transition: color 0.3s ease-in-out;
+  z-index: 1;
+}
+
+.social__link::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0;
+  background-color: var(--primary-color);
+  transition: height 0.3s ease-in-out;
+  opacity: 0;
+  z-index: -1;
+}
+
+.social__link:hover {
+  color: #fff; /* Change to black hover text color */
+}
+
+.social__link:hover::after {
+  height: 100%;
+  opacity: 0.3;
+}
+
+.social__link span {
+  position: relative;
+  z-index: 2;
 }
