--- a/src/index.css
+++ b/src/index.css
@@ -8,13 +8,13 @@
   /* COLORS */
   --background-color: #000000;
   --text-color: #ffffff;
-  --primary-color: #00FF80;
-  --secondary-color: #FFFF00;
+  --primary-color: #00ff80;
+  --secondary-color: #ffff00;
   --border-color-white: #ffffff;
-  --off-white: #FAFAFA;
+  --off-white: #fafafa;
 
   /* FONTS */
-  --font-family: 'Inter', sans-serif;
+  --font-family: "Inter", sans-serif;
 
   /* SIZES */
   --page-padding: 0 2rem;
@@ -31,52 +31,68 @@ body {
 }
 
 /* SCROLLBAR */
-  /* Works on Chrome, Edge, and Safari */
-  ::-webkit-scrollbar {
-    width: 10px;
-  }
+/* Works on Chrome, Edge, and Safari */
+::-webkit-scrollbar {
+  width: 10px;
+}
 
-  ::-webkit-scrollbar-track {
-    background: #000000;
-  }
+::-webkit-scrollbar-track {
+  background: #000000;
+}
 
-  ::-webkit-scrollbar-thumb {
-    background: linear-gradient(45deg, var(--primary-color), var(--secondary-color));
-    border-radius: 5px;
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  }
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(
+    45deg,
+    var(--primary-color),
+    var(--secondary-color)
+  );
+  border-radius: 5px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
 
-  ::-webkit-scrollbar-thumb:hover {
-    background: linear-gradient(45deg, var(--secondary-color), var(--primary-color));
-  }
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(
+    45deg,
+    var(--secondary-color),
+    var(--primary-color)
+  );
+}
 
-  ::-webkit-scrollbar-thumb:active {
-    background: var(--primary-color);
-  }
+::-webkit-scrollbar-thumb:active {
+  background: var(--primary-color);
+}
 
-  /* Works on Firefox */
-  html {
-    scrollbar-width: auto;
-  }
+/* Works on Firefox */
+html {
+  scrollbar-width: auto;
+}
 
-  html::-webkit-scrollbar {
-    width: 10px;
-  }
+html::-webkit-scrollbar {
+  width: 10px;
+}
 
-  html::-webkit-scrollbar-track {
-    background: #000000;
-  }
+html::-webkit-scrollbar-track {
+  background: #000000;
+}
 
-  html::-webkit-scrollbar-thumb {
-    background: linear-gradient(45deg, var(--primary-color), var(--secondary-color));
-    border-radius: 5px;
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  }
+html::-webkit-scrollbar-thumb {
+  background: linear-gradient(
+    45deg,
+    var(--primary-color),
+    var(--secondary-color)
+  );
+  border-radius: 5px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
 
-  html::-webkit-scrollbar-thumb:hover {
-    background: linear-gradient(45deg, var(--secondary-color), var(--primary-color));
-  }
+html::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(
+    45deg,
+    var(--secondary-color),
+    var(--primary-color)
+  );
+}
 
-  html::-webkit-scrollbar-thumb:active {
-    background: var(--primary-color);
-  }
+html::-webkit-scrollbar-thumb:active {
+  background: var(--primary-color);
+}
