--- a/src/pages/home/components/Nav.css
+++ b/src/pages/home/components/Nav.css
@@ -45,39 +45,39 @@
 }
 
 .home-page .nav .nav__list .nav__item .nav__link.contact-us {
-    border: 1px solid var(--text-color);
-    border-radius: var(--border-radius);
-    padding: 8px 16px;
+  border: 1px solid var(--text-color);
+  border-radius: var(--border-radius);
+  padding: 8px 16px;
 }
 
 .home-page .nav .nav__list .nav__item .nav__link.contact-us:hover {
-    border-color: var(--secondary-color);
-    color: var(--secondary-color);
+  border-color: var(--secondary-color);
+  color: var(--secondary-color);
 }
 
 .home-page .nav .nav__list .nav__item:first-of-type {
-    margin-right: auto;
+  margin-right: auto;
 }
 
 .home-page .nav .nav__list .nav__item:last-of-type {
-    margin-left: auto;
+  margin-left: auto;
 }
 
 .home-page .nav .nav__list .nav__item.exam-reg {
-    position: relative;
-    display: flex;
-    flex-flow: column;
+  position: relative;
+  display: flex;
+  flex-flow: column;
 }
 .home-page .nav .nav__list .nav__item.exam-reg::after {
-    content: '';
-    position: absolute;
-    bottom: -5px;
-    width: 100%;
-    height: 1px;
-    background-color: var(--secondary-color);
-    transition: width 0.3s ease-in-out;
+  content: "";
+  position: absolute;
+  bottom: -5px;
+  width: 100%;
+  height: 1px;
+  background-color: var(--secondary-color);
+  transition: width 0.3s ease-in-out;
 }
 
 .home-page .nav .nav__list .nav__item.exam-reg:hover::after {
-    width: 0;
+  width: 0;
 }
