--- a/src/pages/home/styles/Overlay.css
+++ b/src/pages/home/styles/Overlay.css
@@ -3,7 +3,12 @@
   width: 8px;
   height: 8px;
   border-radius: 50%;
-  background-color: rgba(0, 255, 128, 0.7); /* Adjust the green color and transparency as needed */
+  background-color: rgba(
+    0,
+    255,
+    128,
+    0.7
+  ); /* Adjust the green color and transparency as needed */
   box-shadow: 0 0 20px 10px rgba(0, 255, 128, 0.3); /* Add a box-shadow for the glow effect */
   pointer-events: none;
   transform: translate(-50%, -50%);
