Worked on nav responsiveness

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
   --secondary-color: #ffff00;
   --border-color-white: #ffffff;
   --off-white: #fafafa;
+  --red-color: #FF4040;
 
   /* FONTS */
   --font-family: "Inter", sans-serif;
