--- a/src/pages/home/styles/Overlay.css
+++ b/src/pages/home/styles/Overlay.css
@@ -14,3 +14,9 @@
   transform: translate(-50%, -50%);
   z-index: 99; /* Ensure the circular pointer stays on top of other elements */
 }
+
+@media (pointer:none), (pointer:coarse) {
+  .circular-pointer {
+    display: none;
+  }
+}
