--- a/src/pages/home/components/Nav.css
+++ b/src/pages/home/components/Nav.css
@@ -99,12 +99,10 @@
 }
 
 .nav__menu__container._open .nav__menu .nav__menu__item {
-  padding: 1rem;
   border-bottom: 1px solid var(--text-color);
   cursor: pointer;
 }
 
-/* I need a very cool hover effect */
 .nav__menu__container._open .nav__menu .nav__menu__item:is(:hover, :active) {
   background-color: var(--secondary-color);
 }
@@ -117,11 +115,12 @@
   text-decoration: none;
   color: var(--text-color);
   font-size: 1.2rem;
-  transition: color 0.3s ease-in-out;
-  /* Make the link width stretch out */
   display: block;
   width: 100%;
   text-align: center;
+  transition: color 0.3s ease-in-out;
+  padding: 1rem 0;
+  margin: 0;
 }
 
 .nav__menu__container._open .nav__menu .nav__menu__item:hover .nav__menu__link {
