--- a/src/pages/home/styles/index.css
+++ b/src/pages/home/styles/index.css
@@ -1,113 +1,6 @@
-/* HOME */
-.home-page {
-  display: flex;
-  flex-flow: column;
-  gap: 0;
-  position: relative;
-  background-color: var(--background-color);
-  min-height: 100vh;
-  height: auto;
-  align-items: center;
-}
-
-.home-page .title-section {
-  margin-top: var(--nav-height);
-}
-
-.home-page .title-section {
-  display: flex;
-  flex-flow: column;
-  justify-content: center;
-  align-items: center;
-  padding: 2rem 0;
-  text-align: center;
-  padding: var(--page-padding);
-  min-height: 100vh;
-  max-width: 900px;
-}
-
-.home-page .title-section h1 {
-  font-size: 2rem;
-  font-weight: 700;
-  padding: 0 2rem;
-  margin-bottom: 2rem;
-  cursor: default;
-}
-
-.home-page .title-section p {
-  font-size: 0.9rem;
-  font-weight: 300;
-  cursor: default;
-}
-
-.home-page .title-section img {
-  width: 100%;
-  margin-top: 3rem;
-}
-
-@media screen and (max-width: 1249px) {
-  .services-triangle {
-    display: none;
-  }
-  .services-container {
-    margin: 0 !important;
-    width: 100vw !important;
-  }
-}
-
-/* MISSION */
-.mission-section {
-  position: relative;
-  height: auto;
-  color: black;
-  text-align: center;
-  color: white;
-  width: 100%;
-}
-
-.mission-section .mission-image {
-  width: 100%;
-  height: 100vh;
-  object-fit: cover;
-  object-position: center;
-}
-
-.mission-section .mission-content {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  display: flex;
-  flex-flow: column;
-  justify-content: space-around;
-  align-items: center;
-  padding: var(--page-padding);
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  gap: 3rem;
-}
-
-.mission-section .mission-title__text {
-  font-size: 2rem;
-  font-weight: 700;
-}
-
-.mission-section .mission-description {
-  padding: 3rem;
-  background-color: white;
-  color: black;
-  border-radius: var(--border-radius);
-  max-width: 900px;
-}
-
-.mission-section .mission-description .mission-description__text {
-  font-size: 1.5rem;
-  font-weight: 500;
-  margin-bottom: 1rem;
-}
-
-@import url(Footer.css);
-@import url(Community.css);
+@import url(Title.css);
 @import url(Overview.css);
 @import url(Services.css);
+@import url(Community.css);
+@import url(Mission.css);
+@import url(Footer.css);
