Added images to services

--- a/src/pages/home/styles/Services.css
+++ b/src/pages/home/styles/Services.css
@@ -76,8 +76,21 @@
   gap: 2rem;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  height: 100%;
   max-width: 600px;
+  position: relative;
+}
+
+.services-content__right__item {
+  display: flex;
+  justify-content: center;
+}
+
+.services-content__right__item__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: var(--border-radius);
 }
 
 .services-content__right__item__text {
@@ -86,11 +99,13 @@
   gap: 1rem;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  width: 95%;
   max-width: 600px;
   background-color: var(--primary-color);
   padding: 2rem 1rem;
   border-radius: var(--border-radius);
+  position: absolute;
+  top: 90%;
 }
 
 .services-section .services-title {
