--- a/src/pages/home/components/ServicesCard.css
+++ b/src/pages/home/components/ServicesCard.css
@@ -1,6 +1,7 @@
 .services-card__item {
   width: 100%;
-  height: 4rem;
+  min-height: 4rem;
+  height: auto;
   display: flex;
   padding: 1rem;
   align-items: center;
