--- a/src/pages/home/styles/Services.css
+++ b/src/pages/home/styles/Services.css
@@ -100,6 +100,7 @@
   align-items: center;
   justify-content: center;
   width: 95%;
+  min-width: 140px;
   max-width: 600px;
   background-color: var(--primary-color);
   padding: 2rem 1rem;
