--- a/src/pages/company/styles/Main.css
+++ b/src/pages/company/styles/Main.css
@@ -50,3 +50,26 @@
 .company__section-block__container::-webkit-scrollbar-track {
     background-color: white;
 }
+
+@media screen and (max-width: 751px) {
+    .company-main {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .company-main__left {
+        flex-basis: 100%;
+        margin-top: 2rem;
+        gap: 1rem;
+        margin-bottom: 2rem;
+    }
+
+    .company-main__left__logo {
+        transform: scale(1.3);
+    }
+
+    .company-main__left__slogan {
+        font-size: 1rem;
+        text-align: center;
+    }
+}
