--- a/src/pages/company/components/SectionBlock.css
+++ b/src/pages/company/components/SectionBlock.css
@@ -5,6 +5,13 @@
     gap: 1rem;
 }
 
+.company__section-block-content__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
+
 .company__section-block-content {
     text-align: justify;
 }
